--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fraction: ^5.0.3
   gradient_borders: ^1.0.1
   flutter_bloc: ^9.0.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
