--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   lottie: ^3.3.1
   url_launcher: ^6.3.1
+  change_app_package_name: ^1.4.0
 
 dev_dependencies:
   flutter_test:
