--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.1
   change_app_package_name: ^1.4.0
   flutter_screenutil: ^5.9.3
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
