--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   change_app_package_name: ^1.4.0
   flutter_screenutil: ^5.9.3
   auto_size_text: ^3.0.0
+  new_version_plus: ^0.1.0
 
 dev_dependencies:
   flutter_test:
